--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -12,7 +12,7 @@
 
 \newenvironment{system}{\left\lbrace \begin{aligned}}{\end{aligned}\right.}
 
-\title{\bfseries{\Huge{Relazioni di Laboratorio di Fisica Computazionale}}}
+\title{\bfseries{\Huge{Laboratorio di Fisica Computazionale}}}
 \author{\cursiveshape {Luca Cassia - [MAT. 728341]}}
 
 \date{Spring 2012}
