--- a/rel/ch3.tex
+++ b/rel/ch3.tex
@@ -46,8 +46,8 @@ Rappresentando la traiettoria del sistema nello spazio delle fasi si ottiene
 \label{fig:chaotic}
 \end{figure}
 
-\section{Oscillatore di Van Der Pol}
-Analogamente al caso dell'oscillatore caotico, si applica il metodo RK4 all'equazione del pendolo di Van Der Pol, che soddisfa l'equazione
+\section{Altri Esempi}
+Analogamente al caso dell'oscillatore caotico, si applica il metodo RK4 all'equazione del pendolo di Van Der Pol, la cui equazione è
 $$\frac{d^2x}{dt^2}-\mu(1-x^2)\frac{dx}{dt}+x= 0$$
 dove $\mu$ rappresenta l'intensità dello smorzamento. Il sistema associato è
 $$\begin{system}
