--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -7,6 +7,8 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{vicent}
 \usepackage{float}
 
