--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -39,11 +39,13 @@
 \begin{thebibliography}{9}
 \addcontentsline{toc}{chapter}{Bibliografia}
 \bibitem{uno} M. Abramowitz, I. A. Stegun. ``§25.4, Integration'', \textit{Handbook of Mathematical Functions (with Formulas, Graphs, and Mathematical Tables)}, 1972
-\bibitem{due} I. Beichl, F. Sullivan. \textit{Computing in Science and Engineering}, 2000
-\bibitem{tre} M. Hjorth-Jensen. ``§9, Random walks and the Metropolis algorithm'', \textit{Computational Physics}, 2009
+\bibitem{due} M. Hjorth-Jensen. ``§9, Random walks and the Metropolis algorithm'', \textit{Computational Physics}, 2009
+\bibitem{tre} I. Beichl, F. Sullivan. \textit{Computing in Science and Engineering}, 2000
 \bibitem{quattro} Y. Saad. \textit{Iterative Methods for Sparse Linear Systems}, 2003
 \bibitem{cinque} C. Rebbi. \textit{Lecture Notes on Advanced Computing in Physics}, 1996
 \bibitem{sei} S. Weinzierl. \textit{Introduction to Monte Carlo methods}, 2000
+\bibitem{sette} M. Creutz, B. Freedman. \textit{A Statistical Approach to Quantum Mechanics}, 1980
+\bibitem{otto} C. Morningstar. \textit{The Monte Carlo Method in Quantum Mechanics}, 2004
 \end{thebibliography} 
 
 \end{document}
